6 March 2007: Polipo 1.0.0

        No changes since 0.9.99.2.

7 February 2007: Polipo 0.9.99.2

        Fixed a buffer overflow in urlDirname (the 0.9 branch is not
        vulnerable) (reported by J. P. Larocque).
        Implemented use of IPv6 temporary source addresses (Frank Behrens).
        Disabled use of unaligned range requests by default.  This is
        controlled by the variable allowUnalignedRangeRequests (reported
        by Chris Moore).
        Fixed descriptor leaks in SOCKS error handling (reported by
        Roger Dingledine).
        Implemented maxSideBuffering.

6 February 2007: Polipo 0.9.12

        Fixed incorrect caching of redirects (reported by Lawrence Lu).
        Fixed a possible hang when falling back to gethostbyname
        (reported by Chris Moore).

28 December 2006: Polipo 0.9.99.1

        Validation improvements and bug fixes.
        Don't use cached data when receiving the output from an HTTP/1.0 CGI.
        Allowed tunnelling of IMAP and POP traffic by default.
        Changed the disk cache expiry and indexing functions to use chunks.
        Made the disk cache unreadable by others by default.
        Fixed a bug that could cause stale data to be served after
        a connection failure (reported by Hondza).
        Fixed computation of age and rtt for pipelined requests.
        Fixed incorrect cachability of redirects (reported by J.-P. Larocque).
        Fixed a bug that would cause uncachable objects to become
        cachable after being reloaded from the on-disk cache (reported
        by J.-P. Larocque).
        Implemented dontTrustVaryETag.

7 December 2006: Polipo 0.9.11

        Fixed a crash that could happen when a network interface went down
        while a DNS query was in progress (reported by Francesco Zappa).

20 November 2006: Polipo 0.9.99.0:

        Implemented large buffers for headers larger than a chunk's worth.
        Made the HTTP parser lax by default (ignores unknown headers).