@@ -1,3 +1,14 @@
+25 June 2007: Polipo 1.0.1:
+
+        Made Polipo slightly more aggressive when speaking to
+        HTTP/1.0 servers (thanks to Fabian Keil for noticing that).
+        Fixed a crash that would happen when a client used
+        Cache-Control: only-if-cached, and the object was not in cache.
+        (Reported by F. Zappa, A. Patala and V. Ghosal.)
+        Fixed a descriptor leak when running under Windows.
+        Made Polipo optionally drop connections after servicing
+        a number of connections (maxConnectionAge and maxConnectionRequests).
+
 6 March 2007: Polipo 1.0.0
 
         No changes since 0.9.99.2.
